# EuterpeaFun

./: .ghci  .hlint.yaml  EuterpeaFun.cabal  Old Code For Reference.txt  OriginalChordIdeas.txt  README.md  stack.yaml
src/: BasicSynth.hs  ChordConstructor.hs  Examples.hs  Exercises.hs  Helpers.hs  Main.hs  MusicGenerator.hs  OldCodeToLearnFrom.hs  PatternGenerator.hs  PatternPlayer.hs  ScaleConstructor.hs  Scales.hs  SynthExamples.hs  SynthPatternIntegration.hs
