name:                EuterpeaFun
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/EuterpeaFun#readme
license:             BSD3
license-file:        LICENSE
author:              TJ Allen
maintainer:          example@example.com
copyright:           2022 TJ Allen
category:            Music Experiment
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable EuterpeaFun
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 8.0 && < 8.2
                     , Euterpea
  other-modules:       ChordConstructor
