name:                EuterpeaFun
version:             0.2.0.0
synopsis:            Refactored Haskell Music Generation with Euterpea
description:         A clean, functional approach to algorithmic music composition
                     featuring pattern generation, modal scales, and clean abstractions.
homepage:            https://github.com/githubuser/EuterpeaFun#readme
license:             BSD3
license-file:        LICENSE
author:              TJ Allen
maintainer:          example@example.com
copyright:           2022 TJ Allen
category:            Music Experiment
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable EuterpeaFun
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , Euterpea
                     , random
                     , splitmix
  other-modules:       ChordConstructor
                     , Scales
                     , Examples
                     , MusicGenerator
                     , Exercises
                     , Helpers
                     , BasicSynth
                     , SynthExamples
                     , SynthPatternIntegration
